@@ -6,7 +6,8 @@ import org.Yaed.controller.EstudiantesController;
 import org.Yaed.controller.UserController;
 import org.Yaed.entity.*;
 import org.Yaed.windows.Inicio;
-
+import java.util.Random;
+import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -24,27 +25,79 @@ public class App {
             UserController.saveUser(usuario);
         }
 
-                for (int i=0; i < 5; i++){
+        Random rand = new Random();
+
+        List<String> nombres = Arrays.asList("Ana", "María", "Juana", "Lucía", "Carla", "Fernanda", "Isabel", "Paola", "Sofía", "Camila",
+                "Valeria", "Diana", "Marta", "Elena", "Gabriela", "Sara", "Andrea", "Claudia", "Natalia", "Patricia");
+        List<String> apellidos = Arrays.asList("Ramírez", "López", "González", "Martínez", "Rodríguez", "Pérez", "García", "Sánchez", "Castillo", "Cruz");
+
+        List<Etnia> etnias = EstudiantesController.getEtnias();
+        List<Carrera> carreras = CarrerasController.getCarreras();
+        List<Sede> sedes = CarrerasController.getSedes();
+        List<EstadoEstudiante> estados = EstudiantesController.getEstadoEstudiantes();
+        List<TipoEstudiante> tipoEstudiantes = EstudiantesController.getTipoEstudiantes();
+
+        for (int i = 0; i < 80; i++) {
             Estudiante estudiante = new Estudiante();
-            estudiante.setCarnet("125683" +i);
-            estudiante.setNombre("Una" +i);
-            estudiante.setApellido("Rodriguez" +i);
-            estudiante.setTelefono("32"+i);
+
+            String carnet = String.format("%02d-%07d-0300", rand.nextInt(100), rand.nextInt(10000000));
+            String nombre = nombres.get(i % nombres.size()) + (i / nombres.size() > 0 ? (" " + (i / nombres.size())) : "");
+            String apellido = apellidos.get(rand.nextInt(apellidos.size()));
+            String telefono = "82" + String.format("%06d", rand.nextInt(1000000));
+           List<Beca> becas = BecasController.getBecas();
+            estudiante.setCarnet(carnet);
+            estudiante.setNombre(nombre);
+            estudiante.setApellido(apellido);
+            estudiante.setTelefono(telefono);
             estudiante.setFotoURL(null);
-            estudiante.setSexo('M');
-            List<Etnia> etnias = EstudiantesController.getEtnias();
+            estudiante.setSexo('F');
             estudiante.setEtnia(etnias.getFirst());
-            List<Carrera> carreras = CarrerasController.getCarreras();
             estudiante.setCarrera(carreras.getLast());
-            List<Sede> sedes = CarrerasController.getSedes();
             estudiante.setSede(sedes.getFirst());
-            List<EstadoEstudiante> estados = EstudiantesController.getEstadoEstudiantes();
-            estudiante.setEstado(estados.getFirst());
-            List<TipoEstudiante> tipoEstudiantes = EstudiantesController.getTipoEstudiantes();
-            estudiante.setTipoEstudiante(tipoEstudiantes.get(1));
-            estudiante.setBecaid(null);
+            estudiante.setEstado(estados.get(1)); // Estado 1
+            estudiante.setTipoEstudiante(tipoEstudiantes.get(0)); // Tipo 1
+            estudiante.setBecaid(becas.get(1));
+
             EstudiantesController.saveEstudiante(estudiante);
         }
+//        List<String> nombresHombres = Arrays.asList(
+//                "Carlos", "Juan", "Luis", "Miguel", "Pedro", "Jorge", "Andrés", "Diego", "Francisco", "José",
+//                "Rafael", "Mario", "Alberto", "Sergio", "Fernando", "Eduardo", "Ricardo", "Oscar", "Roberto", "Daniel"
+//        );
+//        List<String> apellidos = Arrays.asList("Ramírez", "López", "González", "Martínez", "Rodríguez", "Pérez", "García", "Sánchez", "Castillo", "Cruz");
+//
+//        List<Etnia> etnias = EstudiantesController.getEtnias();
+//        List<Carrera> carreras = CarrerasController.getCarreras();
+//        List<Sede> sedes = CarrerasController.getSedes();
+//        List<EstadoEstudiante> estados = EstudiantesController.getEstadoEstudiantes();
+//        List<TipoEstudiante> tipoEstudiantes = EstudiantesController.getTipoEstudiantes();
+//
+//        for (int i = 0; i < 80; i++) {
+//            Estudiante estudiante = new Estudiante();
+//
+//            // Formato carnet: "xx-xxxxxx-0030"
+//            String carnet = String.format("%02d-%06d-0030", rand.nextInt(100), rand.nextInt(1000000));
+//
+//            String nombre = nombresHombres.get(i % nombresHombres.size()) + (i / nombresHombres.size() > 0 ? (" " + (i / nombresHombres.size())) : "");
+//            String apellido = apellidos.get(rand.nextInt(apellidos.size()));
+//            String telefono = "82" + String.format("%06d", rand.nextInt(1000000));
+//            List<Beca> becas = BecasController.getBecas();
+//
+//            estudiante.setCarnet(carnet);
+//            estudiante.setNombre(nombre);
+//            estudiante.setApellido(apellido);
+//            estudiante.setTelefono(telefono);
+//            estudiante.setFotoURL(null);
+//            estudiante.setSexo('M'); // Sexo masculino
+//            estudiante.setEtnia(etnias.get(0));
+//            estudiante.setCarrera(carreras.get(carreras.size() - 1));
+//            estudiante.setSede(sedes.get(0));
+//            estudiante.setEstado(estados.get(0));
+//            estudiante.setTipoEstudiante(tipoEstudiantes.get(0));
+//            estudiante.setBecaid(becas.get(1));
+//
+//            EstudiantesController.saveEstudiante(estudiante);
+//        }
 
     }
 }
